--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --mode development",
-  "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -17,10 +19,11 @@
   "bugs": {
     "url": "https://github.com/artur-bertash/webpack-boilerplate/issues"
   },
-  "homepage": "https://github.com/artur-bertash/webpack-boilerplate#readme",
+  "homepage": "https://artur-bertash.github.io/weather-app",
   "description": "",
   "devDependencies": {
     "css-loader": "^7.1.2",
+    "gh-pages": "^6.3.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "style-loader": "^4.0.0",
